# simple-notes-app-django

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  compose.yaml  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: login.html  profile.html  profile_change-password.html  profile_edit.html  register.html
apps/accounts/templates/accounts/partials/: _form.html
apps/notes/: admin.py  forms.py  models.py  urls.py  views.py
apps/notes/migrations/: 0001_initial.py
apps/notes/templates/notes/: note_base.html  note_create.html  note_detail.html  note_form.html  note_list.html
apps/notes/templates/notes/partials/: _note_confirmation.html  _note_delete_confirmation.html  _note_form.html  _note_list.html
assets/css/: input.css
core/: env.py  settings.py  urls.py
templates/: app_base.html  base.html
templates/partials/: _app_form_fields.html
