[project]
name = "notes-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=6.0.2",
    "django-htmx>=1.27.0",
    "django-widget-tweaks>=1.5.1",
    "honcho>=2.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.13.0",
    "ruff>=0.15.1",
]
